--- a/extension/tsconfig.json
+++ b/extension/tsconfig.json
@@ -6,7 +6,7 @@
     "esModuleInterop": true,
     "sourceMap": true,
     "allowJs": true,
-    "checkJs": true,
+    "checkJs": false,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
